Fix vertical overflow of button in profile page

--- a/BikenWeb/biken/static/css/profile.css
+++ b/BikenWeb/biken/static/css/profile.css
@@ -24,3 +24,15 @@
 #stat-row {
   min-height: 50%;
 }
+
+#button-row {
+  height: fit-content;
+}
+
+.info-container {
+  height: fit-content;
+}
+
+.buttons {
+  white-space: nowrap;
+}
